Renamed temporary UserN

--- a/Mvc5IdentityExample/Mvc5IdentityExample.Web/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/Mvc5IdentityExample/Mvc5IdentityExample.Web/Views/Account/ExternalLoginConfirmation.cshtml
@@ -18,10 +18,10 @@
             logging in.
     </p>
     <div class="form-group">
-        @Html.LabelFor(m => m.UserName, new { @class = "col-md-2 control-label" })
+        @Html.LabelFor(m => m.UserNName, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" })
-            @Html.ValidationMessageFor(m => m.UserName)
+            @Html.TextBoxFor(m => m.UserNName, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.UserNName)
         </div>
     </div>
     <div class="form-group">
